<resources>

    <string name="app_name">RentWay</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="New_user_signup_now">New User? <b>SignUp now</b></string>
    <string name="google">Google</string>
    <string name="facebook">FACEBOOK</string>
    <string name="use_other_methods">Use Other Methods</string>
    <string name="login">Login</string>
    <string name="forgot_password">forgot password?</string>
    <string name="account">Account</string>
    <string name="already_nhave_an_naccount">Already\nhave an\naccount?</string>
    <string name="already_have_account_signup">New User? Signup Now</string>


    <string name="concerts_theater"><![CDATA[Concerts & Theater]]></string>
    <string name="ev_wth_friends">Events with friends</string>
    <string name="friends_go">Friends go</string>
    <string name="latest">Latest</string>
    <string name="map_location">Map Location</string>
    <string name="meetup_for_android_developer_s">Meetup for Android Developer\'s</string>


    <string name="job_success">Job Success</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="ratings">Star Ratings</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>
    <string name="type_your_message">Type Your Message</string>
    <string name="hi_what_s_up_hasan">Hi, what\'s up Hasan?</string>
    <string name="clara_menard">Clara Menard</string>
    <string name="online">Online</string>
    <string name="yo_clara">Yo! Clara</string>
    <string name="chat">chat</string>
    <string name="menu">menu</string>
    <string name="userimage">userimage</string>
    <string name="_12_05">12/05</string>
    <string name="ali_connor">Ali Connor</string>
    <string name="as_you_like">As you like</string>
    <string name="messages">Messages</string>
    <string name="add_chat">add_chat</string>
    <string name="userimage2">userimage2</string>
    <string name="launch">launch</string>
    <string name="start_your_business">Grow Your Business</string>
    <string name="manage_your_business_much_n_better_than_before">Manage Your Business much\n better than before</string>
    <string name="get_started">Get Started</string>
    <string name="old_password">Old Password</string>
    <string name="update_password">Update Password</string>
    <string name="new_password">New Password</string>
    <string name="logout">logout</string>
    <string name="email">Email</string>
    <string name="profileimage">profileImage</string>
    <string name="dotbutton">dotButton</string>
    <string name="ut_sed_elit_ipsum_aliquam_ut_ex_tristique_condimentum_arcu_vitae_mollis_dolor">Ut sed elit ipsum. Aliquam ut ex tristique, condimentum arcu vitae, mollis dolor.</string>
    <string name="jan_24_at_05_38_pm">Jan 24 at 05:38 PM</string>
    <string name="phasellus_vestibulum_leo_ut_nisi_viverra_sit_amet_lobortis_urna_tempus">Phasellus vestibulum leo ut nisi viverra, sit amet lobortis urna tempus.</string>
    <string name="jan_24_at_11_25_pm">Jan 24 at 11:25 PM</string>
    <string name="user">user</string>
    <string name="adsa">adsa</string>
    <string name="vestibulum_nec_blandit_velit_sed_iaculis_enim">Vestibulum nec blandit velit, sed iaculis enim.</string>
    <string name="jan_23_at_08_44_am">Jan 23 at 08:44 AM</string>
    <string name="asd">asd</string>
    <string name="dsa">dsa</string>
    <string name="sa">sa</string>
    <string name="jan_25_at_10_05_am">Jan 25 at 10:05 AM</string>
    <string name="nunc_vestibulum_erat_ac_ultricies_mollis">Nunc vestibulum erat ac ultricies mollis.</string>
    <string name="dsfd">dsfd</string>
    <string name="dsfaada">dsfaada</string>
    <string name="jan_27_at_02_05_am">Jan 27 at 02:05 AM</string>
    <string name="nunc_sed_convallis_nisi_vel_aliquam_enim_aliquam_sit_amet_risus_libero">Nunc sed convallis nisi, vel aliquam enim. Aliquam sit amet risus libero.</string>
    <string name="sdf">sdf</string>
    <string name="wedr">wedr</string>
    <string name="jan_27_at_07_50_pm">Jan 27 at 07:50 PM</string>
    <string name="quisque_pharetra_enim_ligula_sit_amet_sodales_orci_euismod_eu">Quisque pharetra enim ligula, sit amet sodales orci euismod eu.</string>
    <string name="wears">wears</string>
    <string name="_13dfsf">13dfsf</string>
    <string name="jan_28_at_07_01_pm">Jan 28 at 07:01 PM</string>
    <string name="etiam_laoreet_justo_ipsum_ac_consectetur_eros_rutrum_eu">Etiam laoreet justo ipsum, ac consectetur eros rutrum eu.</string>
    <string name="todo">TODO</string>
    <string name="mon_at_12_05_pm">Mon at 12:05 PM</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="earlier">Earlier</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="edit_my_profile">edit my profile</string>
</resources>