<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_password"
            android:textAlignment="center"

            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/oldpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/oldpasslog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/modifiedEditText"
                android:hint="@string/old_password"
                android:inputType="textPassword"

                android:autofillHints="@string/old_password" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/newpasslog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/modifiedEditText"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:autofillHints="new password"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/updatepass"
            android:background="@drawable/bg_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/update_password" />


</LinearLayout>